// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/DataExport/Create/CreateExportTask should match snapshot when audit loading is equal true 1`] = `
<div>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
      >
        <span
          class="ant-spin-dot ant-spin-dot-spin"
        >
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
          <i
            class="ant-spin-dot-item"
          />
        </span>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <section
        class="css-doq0dk"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/project//data/export"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回工单列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
              disabled=""
              type="button"
            >
              <span>
                重 置
              </span>
            </button>
          </div>
        </div>
        <form
          class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw hasTopHeader clearPaddingBottom css-19jfn7e"
        >
          <section
            class="has-border css-1114g56"
          >
            <section
              class="css-bspaai"
            >
              <h3
                class="ant-typography css-y0jsrg css-dev-only-do-not-override-txh9fw"
              >
                <span
                  class="custom-icon order-create-title-icon title-icon css-a29a66"
                >
                  <svg
                    fill="currentColor"
                    height="28"
                    viewBox="0 0 24 28"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 3.33333V8.66666H20V3.33333H22.6755C23.4069 3.33333 24 3.9266 24 4.65786V26.0088C24 26.7403 23.4068 27.3333 22.6755 27.3333H1.32453C0.593013 27.3333 0 26.7401 0 26.0088V4.65786C0 3.92634 0.593267 3.33333 1.32453 3.33333H4ZM8 20.6667H5.33333V23.3333H8V20.6667ZM8 16.6667H5.33333V19.3333H8V16.6667ZM8 12.6667H5.33333V15.3333H8V12.6667ZM17.3333 0.666664V6H6.66667V0.666664H17.3333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  创建导出工单
                </span>
              </h3>
              <div
                class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                  >
                    <label
                      class="ant-form-item-required ant-form-item-no-colon"
                      for="workflow_subject"
                      title=""
                    />
                  </div>
                  <div
                    class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <input
                          aria-required="true"
                          class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper workflow-name-input-wrapper css-opeiev"
                          id="workflow_subject"
                          placeholder="请输入数据导出工单名称"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item workflow-base-info-desc-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                  >
                    <label
                      class="ant-form-item-no-colon"
                      for="desc"
                      title="工单描述"
                    >
                      工单描述
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper basic-input-wrapper css-1pd1cd5 ant-input-textarea-affix-wrapper ant-input-textarea-show-count css-dev-only-do-not-override-txh9fw ant-input-show-count"
                          data-count="0 / 3000"
                        >
                          <textarea
                            class="ant-input css-dev-only-do-not-override-txh9fw"
                            id="desc"
                            placeholder="点击添加数据导出描述"
                            style="overflow-y: hidden; resize: none;"
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              class="ant-input-data-count"
                            >
                              0 / 3000
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </form>
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw clearPaddingBottom css-23knkd"
        >
          <section
            class="has-border css-1114g56"
          >
            <section
              class="css-bspaai"
            >
              <h1
                class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
              >
                选择导出对象
              </h1>
              <div
                class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                  >
                    <label
                      class="ant-form-item-required ant-form-item-no-colon"
                      for="dbService"
                      title=""
                    >
                      <div
                        class="label-cont-custom"
                      >
                        <div>
                          <span
                            class="custom-icon-ellipse css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                fill="#E8F3FF"
                                height="16"
                                rx="3"
                                width="16"
                              />
                              <circle
                                cx="8"
                                cy="8"
                                fill="white"
                                r="3"
                                stroke="#4583FF"
                                stroke-width="2"
                              />
                            </svg>
                          </span>
                          <span>
                            数据源
                          </span>
                        </div>
                      </div>
                    </label>
                  </div>
                  <div
                    class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          aria-required="true"
                          class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="dbService_list_0"
                                aria-autocomplete="list"
                                aria-controls="dbService_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="dbService_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="dbService"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择数据源
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                  >
                    <label
                      class="ant-form-item-no-colon"
                      for="schema"
                      title=""
                    >
                      <div
                        class="label-cont-custom"
                      >
                        <div>
                          <span
                            class="custom-icon-ellipse css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                fill="#E8F3FF"
                                height="16"
                                rx="3"
                                width="16"
                              />
                              <circle
                                cx="8"
                                cy="8"
                                fill="white"
                                r="3"
                                stroke="#4583FF"
                                stroke-width="2"
                              />
                            </svg>
                          </span>
                          <span>
                            数据库
                          </span>
                        </div>
                      </div>
                    </label>
                  </div>
                  <div
                    class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="schema_list_0"
                                aria-autocomplete="list"
                                aria-controls="schema_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="schema_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="schema"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择数据库
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </form>
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw clearPaddingBottom css-19jfn7e"
        >
          <section
            class="css-bspaai"
          >
            <h1
              class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
            >
              选择导出方式
            </h1>
            <div
              class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="exportMethod"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-row actiontech-mode-switcher css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-col ant-col-8 css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-1x7j8vu"
                          >
                            <span
                              class="actiontech-mode-switcher-item-icon"
                            >
                              <span
                                class="custom-icon  css-u3jcp4"
                              >
                                <svg
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15 7.5H3V14.25H15V7.5ZM2.25 2.25H15.75C16.1642 2.25 16.5 2.58579 16.5 3V15C16.5 15.4142 16.1642 15.75 15.75 15.75H2.25C1.83579 15.75 1.5 15.4142 1.5 15V3C1.5 2.58579 1.83579 2.25 2.25 2.25ZM3.75 4.5V6H5.25V4.5H3.75ZM6.75 4.5V6H8.25V4.5H6.75ZM3.75 8.25H6V12H3.75V8.25Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="actiontech-mode-switcher-item-text"
                            >
                              输入SQL语句
                            </span>
                            <div
                              class="active-icon-wrapper"
                            >
                              <span
                                class="icon-mode-switcher-checked active-icon css-u3jcp4"
                              >
                                <svg
                                  fill="none"
                                  height="14"
                                  viewBox="0 0 14 14"
                                  width="14"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    id="Frame"
                                  >
                                    <path
                                      d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                      id="Vector"
                                      stroke="#FCFBF9"
                                      stroke-linejoin="round"
                                      stroke-width="1.5"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="sql"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        aria-required="true"
                        class="custom-monaco-editor css-baixa9"
                        height="400px"
                        id="sql"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                        value="/* input your sql */"
                        width="100%"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </form>
        <section
          class="css-bspaai"
          style="padding-bottom: 80px;"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary ant-btn-loading basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon ant-btn-loading-icon"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  审 核
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-loading basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon ant-btn-loading-icon"
                >
                  <span
                    aria-label="loading"
                    class="anticon anticon-loading anticon-spin"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="loading"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                      />
                    </svg>
                  </span>
                </span>
                <span>
                  SQL美化
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99999 12.8333C3.77824 12.8333 1.16666 10.2217 1.16666 6.99996C1.16666 3.77821 3.77824 1.16663 6.99999 1.16663C10.2217 1.16663 12.8333 3.77821 12.8333 6.99996C12.8333 10.2217 10.2217 12.8333 6.99999 12.8333ZM6.99999 11.6666C8.23767 11.6666 9.42465 11.175 10.2998 10.2998C11.175 9.42462 11.6667 8.23764 11.6667 6.99996C11.6667 5.76228 11.175 4.5753 10.2998 3.70013C9.42465 2.82496 8.23767 2.33329 6.99999 2.33329C5.76231 2.33329 4.57533 2.82496 3.70016 3.70013C2.82499 4.5753 2.33332 5.76228 2.33332 6.99996C2.33332 8.23764 2.82499 9.42462 3.70016 10.2998C4.57533 11.175 5.76231 11.6666 6.99999 11.6666ZM6.41666 4.08329H7.58332V5.24996H6.41666V4.08329ZM6.41666 6.41663H7.58332V9.91663H6.41666V6.41663Z"
                      fill="#8A8F99"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Create/CreateExportTask should match snapshot when auditLoading is equal false 1`] = `
<div>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-container"
    >
      <section
        class="css-doq0dk"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/project//data/export"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回工单列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
              type="button"
            >
              <span>
                重 置
              </span>
            </button>
          </div>
        </div>
        <form
          class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw hasTopHeader clearPaddingBottom css-19jfn7e"
        >
          <section
            class="has-border css-1114g56"
          >
            <section
              class="css-bspaai"
            >
              <h3
                class="ant-typography css-y0jsrg css-dev-only-do-not-override-txh9fw"
              >
                <span
                  class="custom-icon order-create-title-icon title-icon css-a29a66"
                >
                  <svg
                    fill="currentColor"
                    height="28"
                    viewBox="0 0 24 28"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 3.33333V8.66666H20V3.33333H22.6755C23.4069 3.33333 24 3.9266 24 4.65786V26.0088C24 26.7403 23.4068 27.3333 22.6755 27.3333H1.32453C0.593013 27.3333 0 26.7401 0 26.0088V4.65786C0 3.92634 0.593267 3.33333 1.32453 3.33333H4ZM8 20.6667H5.33333V23.3333H8V20.6667ZM8 16.6667H5.33333V19.3333H8V16.6667ZM8 12.6667H5.33333V15.3333H8V12.6667ZM17.3333 0.666664V6H6.66667V0.666664H17.3333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  创建导出工单
                </span>
              </h3>
              <div
                class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                  >
                    <label
                      class="ant-form-item-required ant-form-item-no-colon"
                      for="workflow_subject"
                      title=""
                    />
                  </div>
                  <div
                    class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <input
                          aria-required="true"
                          class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper workflow-name-input-wrapper css-opeiev"
                          id="workflow_subject"
                          placeholder="请输入数据导出工单名称"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item workflow-base-info-desc-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                  >
                    <label
                      class="ant-form-item-no-colon"
                      for="desc"
                      title="工单描述"
                    >
                      工单描述
                    </label>
                  </div>
                  <div
                    class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <span
                          class="ant-input-affix-wrapper basic-input-wrapper css-1pd1cd5 ant-input-textarea-affix-wrapper ant-input-textarea-show-count css-dev-only-do-not-override-txh9fw ant-input-show-count"
                          data-count="0 / 3000"
                        >
                          <textarea
                            class="ant-input css-dev-only-do-not-override-txh9fw"
                            id="desc"
                            placeholder="点击添加数据导出描述"
                            style="overflow-y: hidden; resize: none;"
                          />
                          <span
                            class="ant-input-suffix"
                          >
                            <span
                              class="ant-input-data-count"
                            >
                              0 / 3000
                            </span>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </form>
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw clearPaddingBottom css-23knkd"
        >
          <section
            class="has-border css-1114g56"
          >
            <section
              class="css-bspaai"
            >
              <h1
                class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
              >
                选择导出对象
              </h1>
              <div
                class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                  >
                    <label
                      class="ant-form-item-required ant-form-item-no-colon"
                      for="dbService"
                      title=""
                    >
                      <div
                        class="label-cont-custom"
                      >
                        <div>
                          <span
                            class="custom-icon-ellipse css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                fill="#E8F3FF"
                                height="16"
                                rx="3"
                                width="16"
                              />
                              <circle
                                cx="8"
                                cy="8"
                                fill="white"
                                r="3"
                                stroke="#4583FF"
                                stroke-width="2"
                              />
                            </svg>
                          </span>
                          <span>
                            数据源
                          </span>
                        </div>
                      </div>
                    </label>
                  </div>
                  <div
                    class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          aria-required="true"
                          class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="dbService_list_0"
                                aria-autocomplete="list"
                                aria-controls="dbService_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="dbService_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="dbService"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择数据源
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                  >
                    <label
                      class="ant-form-item-no-colon"
                      for="schema"
                      title=""
                    >
                      <div
                        class="label-cont-custom"
                      >
                        <div>
                          <span
                            class="custom-icon-ellipse css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                fill="#E8F3FF"
                                height="16"
                                rx="3"
                                width="16"
                              />
                              <circle
                                cx="8"
                                cy="8"
                                fill="white"
                                r="3"
                                stroke="#4583FF"
                                stroke-width="2"
                              />
                            </svg>
                          </span>
                          <span>
                            数据库
                          </span>
                        </div>
                      </div>
                    </label>
                  </div>
                  <div
                    class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-form-item-control-input"
                    >
                      <div
                        class="ant-form-item-control-input-content"
                      >
                        <div
                          class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="schema_list_0"
                                aria-autocomplete="list"
                                aria-controls="schema_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="schema_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="schema"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-placeholder"
                            >
                              请选择数据库
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </form>
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw clearPaddingBottom css-19jfn7e"
        >
          <section
            class="css-bspaai"
          >
            <h1
              class="ant-typography css-1eepp70 css-dev-only-do-not-override-txh9fw"
            >
              选择导出方式
            </h1>
            <div
              class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="exportMethod"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-row actiontech-mode-switcher css-dev-only-do-not-override-txh9fw"
                      >
                        <div
                          class="ant-col ant-col-8 css-dev-only-do-not-override-txh9fw"
                        >
                          <div
                            class="actiontech-mode-switcher-item actiontech-mode-switcher-item-active css-1x7j8vu"
                          >
                            <span
                              class="actiontech-mode-switcher-item-icon"
                            >
                              <span
                                class="custom-icon  css-u3jcp4"
                              >
                                <svg
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15 7.5H3V14.25H15V7.5ZM2.25 2.25H15.75C16.1642 2.25 16.5 2.58579 16.5 3V15C16.5 15.4142 16.1642 15.75 15.75 15.75H2.25C1.83579 15.75 1.5 15.4142 1.5 15V3C1.5 2.58579 1.83579 2.25 2.25 2.25ZM3.75 4.5V6H5.25V4.5H3.75ZM6.75 4.5V6H8.25V4.5H6.75ZM3.75 8.25H6V12H3.75V8.25Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                            <span
                              class="actiontech-mode-switcher-item-text"
                            >
                              输入SQL语句
                            </span>
                            <div
                              class="active-icon-wrapper"
                            >
                              <span
                                class="icon-mode-switcher-checked active-icon css-u3jcp4"
                              >
                                <svg
                                  fill="none"
                                  height="14"
                                  viewBox="0 0 14 14"
                                  width="14"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    id="Frame"
                                  >
                                    <path
                                      d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                      id="Vector"
                                      stroke="#FCFBF9"
                                      stroke-linejoin="round"
                                      stroke-width="1.5"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="sql"
                    title=""
                  />
                </div>
                <div
                  class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        aria-required="true"
                        class="custom-monaco-editor css-baixa9"
                        height="400px"
                        id="sql"
                        language="sql"
                        options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14}"
                        value="/* input your sql */"
                        width="100%"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </form>
        <section
          class="css-bspaai"
          style="padding-bottom: 80px;"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  审 核
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  SQL美化
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99999 12.8333C3.77824 12.8333 1.16666 10.2217 1.16666 6.99996C1.16666 3.77821 3.77824 1.16663 6.99999 1.16663C10.2217 1.16663 12.8333 3.77821 12.8333 6.99996C12.8333 10.2217 10.2217 12.8333 6.99999 12.8333ZM6.99999 11.6666C8.23767 11.6666 9.42465 11.175 10.2998 10.2998C11.175 9.42462 11.6667 8.23764 11.6667 6.99996C11.6667 5.76228 11.175 4.5753 10.2998 3.70013C9.42465 2.82496 8.23767 2.33329 6.99999 2.33329C5.76231 2.33329 4.57533 2.82496 3.70016 3.70013C2.82499 4.5753 2.33332 5.76228 2.33332 6.99996C2.33332 8.23764 2.82499 9.42462 3.70016 10.2998C4.57533 11.175 5.76231 11.6666 6.99999 11.6666ZM6.41666 4.08329H7.58332V5.24996H6.41666V4.08329ZM6.41666 6.41663H7.58332V9.91663H6.41666V6.41663Z"
                      fill="#8A8F99"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</div>
`;
